fix pom for pipeline